apps/media/calibre-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  labels:
    app: calibre-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: calibre-web
          image: ghcr.io/linuxserver/calibre-web:0.6.21
          imagePullPolicy: IfNotPresent
          ports:
            - name: calibre-web
              containerPort: 8083
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8083
              scheme: HTTP
          volumeMounts:
            - mountPath: /config
              name: calibre-web-config
            - mountPath: /data/books
              name: nfs-nas01
              subPath: Books
      volumes:
        - name: calibre-web-config
          persistentVolumeClaim:
            claimName: calibre-web-pvc
        - name: nfs-nas01
          nfs:
            server: nas01.bubylou.com
            path: /srv/share
