apps/media/calibre-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
    - port: 8083
      protocol: TCP
      targetPort: calibre-web
  sessionAffinity: None
  type: ClusterIP
