apps/media/calibre-web/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: "sso-authelia@kubernetescrd"
spec:
  rules:
    - host: calibre-web.bubylou.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 8083
  tls:
    - hosts:
      - calibre-web.bubylou.com
      secretName: calibre-web-bubylou-tls
